--- a/proyecto-final/public/app.css
+++ b/proyecto-final/public/app.css
@@ -1,9 +1,20 @@
 body{
-    background-color: #333;
+    color: black;
+    background-image: url(./img/backgr.jpeg);
+}
+
+
+
+.headerr{ 
+    background-color: #008349;
+    margin-bottom: 20px;
 }
 
 .card{
-    background-color: #9b9999;
+    padding: 5%;
+    border-radius: 40px;
+    background-color: white;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
 }
 
 .nav-link {
@@ -11,10 +22,31 @@ body{
 }
 
 .pepe, .pepea{
-    background-color: rgb(9, 185, 18);
-    border-radius: 5%;
+    background-color: #008349;
+    border-radius: 15px;
     color: white;
     height: 40px;
+}
+
+.pepe:hover{
+    background-color: black;
+    color: white;
+}
+
+.nav-text{
+    color: white;
+}
+
+.nav-text:hover,
+.nav-text-p:hover{
+    background-color: white;
+    color: black;
+}
+
+.nav-text-p{
+    background-color: #009e57;
+    color: white;
+    border-radius: 5px;
 }
 
 .logoo{
@@ -25,4 +57,3 @@ body{
 .yaya{
 width: 50%;
 }
-
